second socket try

--- a/index.html
+++ b/index.html
@@ -10,60 +10,36 @@
             <tr>
                 <td>DUPA</td>
                 <td>
-                    <div class="switch">
+                    <div class="switch" id="switchButton">
                     <input type="checkbox">
-                    <label><i>
-                        <div>
-                            <p>
-                                <button id="switchButton">turn on</button>
-                            </p>
-                        </div> 
-                    </i></label>
+                    <label><i></i></label>
                     </div>
                 </td> 
             </tr>
             <tr>
                 <td>DUPA1</td>
                 <td>
-                    <div class="switch1">
+                    <div class="switch1" id="switchButton1">
                     <input type="checkbox">
-                    <label><i>
-                        <div>
-                            <p>
-                                <button id="switchButton1">turn on</button>
-                            </p>
-                        </div>    
-                    </i></label>
+                    <label><i></i></label>
                     </div>
                 </td> 
             </tr>
             <tr>
                 <td>DUPA2</td>
                 <td>
-                    <div class="switch2">
+                    <div class="switch2" id="switchButton2">
                     <input type="checkbox">
-                    <label><i>
-                        <div>
-                            <p>
-                                <button id="switchButton2">turn on</button>
-                            </p>
-                        </div> 
-                    </i></label>
+                    <label><i></i></label>
                     </div>
                 </td> 
             </tr>
             <tr>
                 <td>DUPA3</td>
                 <td>
-                    <div class="switch3">
+                    <div class="switch3" id="switchButton3">
                     <input type="checkbox">
-                    <label><i>
-                        <div>
-                            <p>
-                                <button id="switchButton3">turn on</button>
-                            </p>
-                        </div> 
-                    </i></label>
+                    <label><i></i></label>
                     </div>
                 </td> 
             </tr>
@@ -135,7 +111,7 @@
                     else 
                         $('#switchButton').text('turn on');
                 });  
-    
+
             });
         </script>
 
