third socket try

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     socket.send(message);
                     $('#messages').append('<li>me: ' + message + '</li>');
  
-                    if (message == 'turn on')
+                    if (message == '2turn on')
                         $('#switchButton2').text('2turn off');
                     else 
                         $('#switchButton2').text('2turn on');
